# 20242_Embedded-Project

./: sdkconfig  sdkconfig.old
main/: BLE.c  BLE.h  BLE_Handler.c  BLE_Handler.h  CMakeLists.txt  Camera.c  Global.h  Pwm_servo.c  Pwm_servo.h  RIFD_Handler.c  RIFD_Handler.h  Telegram.c  Telegram.h  UARTHandler.c  UARTHandler.h  WifiSTA.c  WifiSTA.h  main.c
